fix the broken layout problem on app state change
Fix it by forcing redrawing of the iframe.

--- a/client/app/styles/main.styl
+++ b/client/app/styles/main.styl
@@ -12,17 +12,15 @@
 .home-body
     width 100%
     height 100%
-    padding 0
+    padding 36px 0 0 0
     margin 0
     background bgcolor
     background #FDFDFD
     overflow hidden
     box-sizing border-box
-    padding-top 36px
 
 body
     box-sizing border-box
-
 
 .navbar
     position fixed
